--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
 
-*.h-1DGX5P1VQA000
-DerivedData/HWS-WordScramble/Build/Intermediates.noindex/XCBuildData/BuildDescriptionCacheIndex-fec2d25ecbbd6b776147c5df8756c4fe
-DerivedData
-DerivedData/HWS-WordScramble/Build/Intermediates.noindex/XCBuildData/BuildDescriptionCacheIndex-fec2d25ecbbd6b776147c5df8756c4fe
-*.mdb
-DerivedData/HWS-WordScramble/Logs/Update Signing/LogStoreManifest.plist
+# Created by https://www.toptal.com/developers/gitignore/api/xcode
+# Edit at https://www.toptal.com/developers/gitignore?templates=xcode
+
+### Xcode ###
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## User settings
+xcuserdata/
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+*.xcscmblueprint
+*.xccheckout
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+build/
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
+## Gcc Patch
+/*.gcno
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
+
+# End of https://www.toptal.com/developers/gitignore/api/xcode
